# zero2prod

./: Cargo.toml  README.md  config.yaml
.cargo/: config.yml
migrations/: 20220522001617_create_subscriptio.sql
requirements/: user-stories.md
scripts/: init_db.sh
src/: lib.rs  settings.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
