[package]
name = "bitflips"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# axum
# enabled features: form, http1, hyper/http1, json, matched-path, original-uri, query, serde_json, serde_urlencoded, tower-log, tower/log
# disabled features: base64, headers, http2, multer, multipart, sha-1, tokio-tungstenite, ws
axum = "0.5.6"
# hyper
hyper = "0.14.18"
# serde
serde = { version = "1.0.137", features = ["derive"] }
# tokio
# enabled features: bytes, fs, full, io-std, io-util, libc, macros, memchr, mio/net, mio/os-ext, mio/os-poll, net, num_cpus, once_cell, parking_lot, process, rt, rt-multi-thread, signal, signal-hook-registry, socket2, sync, time, tokio-macros, winapi/consoleapi, winapi/namedpipeapi, winapi/threadpoollegacyapiset
# disabled features: mio, stats, test-util, tracing, winapi
tokio = { version = "1.18.2", features = ["full"] }
config = { version = "0.13.1", features = ["ron", "yaml"], default-features = false }
uuid = { version = "1.0.0", features = ["v4"] }
chrono = "0.4.19"
tower-http = { version = "0.3.3", features = ["trace"] }
tower = "0.4.12"
log = "0.4.17"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"

[dev-dependencies]
once_cell = "1.12.0"
# reqwest
# enabled features: __tls, default-tls, hyper-tls, native-tls-crate, tokio-native-tls
reqwest = "0.11.10"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
